AX: Chromium doesn't pass accessibility text range and line number tests https://bugs.webkit.org/show_bug.cgi?id=97246

Reviewed by Chris Fleizach.

Source/WebCore:

Adds a method to get all line breaks at once, so retrieving all
line breaks isn't an O(n^2) operation for Chromium.

Enables four existing tests to pass on Chromium:
Tests: accessibility/textarea-insertion-point-line-number.html
       accessibility/textarea-line-for-index.html
       accessibility/textarea-selected-text-range.html
       accessibility/textbox-role-reports-selection.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::lineBreaks):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::lineBreaks):
(WebCore):
* accessibility/AccessibilityRenderObject.h:
(AccessibilityRenderObject):

Source/WebKit/chromium:

Use improved implementation of AccessibilityRenderObject::lineBreaks
and implement methods to get the line number of the selection and
to set the text range.

Enables four existing tests to pass on Chromium:
Tests: accessibility/textarea-insertion-point-line-number.html
       accessibility/textarea-line-for-index.html
       accessibility/textarea-selected-text-range.html
       accessibility/textbox-role-reports-selection.html

* public/WebAccessibilityObject.h:
(WebAccessibilityObject):
* src/WebAccessibilityObject.cpp:
(WebKit::WebAccessibilityObject::selectionEndLineNumber):
(WebKit):
(WebKit::WebAccessibilityObject::selectionStartLineNumber):
(WebKit::WebAccessibilityObject::setSelectedTextRange):
(WebKit::WebAccessibilityObject::lineBreaks):

Tools:

Provide a chromium implementation of some AccessibilityUIElement
methods needed by accessibility tests.

Enables four existing tests to pass on Chromium:
Tests: accessibility/textarea-insertion-point-line-number.html
       accessibility/textarea-line-for-index.html
       accessibility/textarea-selected-text-range.html
       accessibility/textbox-role-reports-selection.html

* DumpRenderTree/chromium/TestRunner/AccessibilityUIElementChromium.cpp:
(AccessibilityUIElement::insertionPointLineNumberGetterCallback):
(AccessibilityUIElement::selectedTextRangeGetterCallback):
(AccessibilityUIElement::lineForIndexCallback):
(AccessibilityUIElement::setSelectedTextRangeCallback):

LayoutTests:

Enables four tests on chromium:
Tests: accessibility/textarea-insertion-point-line-number.html
       accessibility/textarea-line-for-index.html
       accessibility/textarea-selected-text-range.html
       accessibility/textbox-role-reports-selection.html

* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/115545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129527 268f45cc-cd09-0410-ab3c-d52691b4dbfc